--- a/02-Programming.html
+++ b/02-Programming.html
@@ -124,10 +124,8 @@ $(document).ready(function () {
 <p>Your work goes here …</p>
 <div id="task-1" class="section level2">
 <h2>Task 1</h2>
+<pre class="r"><code>#download.file(&quot;http://www-bcf.usc.edu/~gareth/ISL/Auto.csv&quot;,destfile=&quot;Auto.csv&quot;)</code></pre>
 </div>
-</div>
-<div id="r-download.filehttpwww-bcf.usc.edugarethislauto.csvdestfileauto.csv" class="section level1">
-<h1><code>{r} #download.file(&quot;http://www-bcf.usc.edu/~gareth/ISL/Auto.csv&quot;,destfile=&quot;Auto.csv&quot;) #</code></h1>
 <div id="task-2" class="section level2">
 <h2>Task 2</h2>
 <pre class="r"><code>Auto &lt;- read.csv(&quot;/home/local/MAC/aimholte/Math-253-Assignments-2.0/Auto.csv&quot;)</code></pre>
@@ -138,6 +136,13 @@ $(document).ready(function () {
 </div>
 <div id="task-4" class="section level2">
 <h2>Task 4</h2>
+<pre class="r"><code>#install.packages(ISLR)</code></pre>
+</div>
+<div id="task-5" class="section level2">
+<h2>Task 5</h2>
+<pre class="r"><code>task5top &lt;- Auto[1:5,1:3]
+#dim(Auto)
+task5bottom &lt;- Auto[(nrow(Auto)-4):nrow(Auto), -(1:6)]</code></pre>
 </div>
 <div id="test-statements" class="section level2">
 <h2>Test statements</h2>
@@ -150,12 +155,12 @@ $(document).ready(function () {
 ## ERROR when running  check(TRUE, is.character(auto_file_name))
 ## passed: object &quot;task3&quot; exists
 ## FAILED: &quot;package:ISLR&quot; %in% search()
-## ERROR when running  check(5, nrow(task5top))
-## ERROR when running  check(3, ncol(task5top))
-## ERROR when running  check(5, nrow(task5bottom))
-## ERROR when running  check(3, ncol(task5bottom))
-## ERROR when running  check(TRUE, task5top[5, 3] == Auto[5, 3])
-## ERROR when running  check(TRUE, task5bottom[5, 3] == Auto[nrow(Auto), ncol(Auto)])</code></pre>
+## passed: nrow(task5top)
+## passed: ncol(task5top)
+## passed: nrow(task5bottom)
+## passed: ncol(task5bottom)
+## passed: task5top[5, 3] == Auto[5, 3]
+## passed: task5bottom[5, 3] == Auto[nrow(Auto), ncol(Auto)]</code></pre>
 </div>
 </div>
 
